VersionFieldIT should register transportClientPlugins (#62734)